[package]
name = "rust-trace-demo"
version = "0.1.0"
authors = ["woodgear <1875486458@qq.com>"]
edition = "2018"

[dependencies]
failure = "0.1.6"
tracing = "0.1.13"
tracing-subscriber = "0.2.5"
backtrace = "0.3.46"
saber-tools = { git = "https://github.com/woodgear/saber-tools.git" }
serde = { version = "1.0", features = ["derive"] }
sugar = { git = "https://github.com/harryfei/sugar-rs.git" }
sentry = "0.18.0"
other-crate = { path = "../other-crate" }

[profile.release]
lto = true
debug = true
